[bug fix] Reduce code-footer z-index
Reduce the code-footer index to something
more sensible (it currently covers the
web file browser).

--- a/source/css/cside.css
+++ b/source/css/cside.css
@@ -1650,7 +1650,7 @@ body.night .project-hover {
     text-overflow: ellipsis;
     color: #FFF;
     flex-basis: 20px;
-    z-index: 9999;
+    z-index: 9;
     flex-grow: 1;
 }
 
